# WindowsPrimitiveShell

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: lint.yaml
apps/: CMakeLists.txt  shell.c
cmake/: compile_options.cmake
include/shell/: process.h
src/: CMakeLists.txt
src/shell/: process.c
